--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         applicationId "space.siwawesw.app.gps"
         minSdkVersion 26
         targetSdkVersion 28
+        buildToolsVersion "28.0.3"
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
